--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <groupId>com.kumuluz.ee.logs</groupId>
             <version>${kumuluzee-logs.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.kumuluz.ee.discovery</groupId>
+            <artifactId>kumuluzee-discovery-etcd</artifactId>
+            <version>${kumuluzee-discovery.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
